# EmotionDetection-Wearable-2025

./: main.py  main_lite_test.py  pyproject.toml  requirement.txt
